# cc-pre-tool-use-hook-judge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
.spec-workflow/steering/: product.md  structure.md  tech.md
builtin_configs/: validate_bq_query.yaml  validate_codex_mcp.yaml  validate_find.yaml  validate_git_push.yaml  validate_xargs.yaml
src/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  judge.py  models.py  schema.py
tests/: __init__.py  test_config.py  test_models.py  test_schema.py  test_validate_response_format.py
