[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-pre-tool-use-hook-judge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.1",
]

[project.scripts]
cc-pre-tool-use-hook-judge = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
