[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-pre-tool-use-hook-judge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.1.36",
    "jsonschema==4.26.0",
    "pyyaml==6.0.3",
]

[project.scripts]
cc-pre-tool-use-hook-judge = "src.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"builtin_configs" = "builtin_configs"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.1",
    "ruff==0.14.10",
    "types-jsonschema==4.26.0.20260109",
    "types-pyyaml==6.0.12.20250915",
]
